# sentinelai-audit-framework

./: .gitignore  AWSOperationalBestPracticesPCIDSS4.txt  DEPLOYMENT_STEPS.md  MIGRATION_PLAN.md  MIGRATION_SUMMARY.md  README.md  Team 152 - IT Challenge #3 Auto Audit Framework by AI (2).txt  cline_mcp_settings.json  deploy.sh  deploy_full.sh  ecosystem.config.js  manual_deploy.sh  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
aws-auto-inventory/: config_pci_dss_compliance.json  my-simple-config.yaml  scan.py  (+2 more)
my_compliance_agent/: bedrock_debug.py  collect_config_evidence.py  deploy_all_requirement.py  deploy_config_rules.py  main.py  main_parallel.py  pyproject.toml  requirements.txt  test_cleanup.py  test_connection.py  test_llm.py
my_compliance_agent/audit_result/: 1_2_8_audit.json
my_compliance_agent/check/: 1_2_8_audit.json
my_compliance_agent/evidence/: all_evidence.json  scan_results_2025-07-15T22-10.json
my_compliance_agent/garbage/: 10_2_1.json  10_2_1_audit_v1.json  10_2_1_audit_v2.json  10_2_1_audit_v3.json  10_2_1_audit_v4.json  10_2_1_audit_v5.json  10_2_1_audit_v6.json  10_2_1_audit_v7.json  10_2_1_audit_v8.json  1_2_5.json  1_2_5_audit.json  1_3_1_audit.json  3_3_1_3.json  A1_1_2_audit.json  A3_4_1.json  pci_dss_control_1.2.5_audit_result.json  pci_dss_control_10_2_1_audit_result.json
my_compliance_agent/requirement/: 1_2_5.json  1_2_8.json
my_compliance_agent/testing/: deploy_all_config_rules.py  test_cleanup.py  test_connection.py  test_evidence.py  test_evidence_only.py  test_kb.py  test_simple_extraction.py
(+1348 files in other folders)
